adicionando conteudo principal do site

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
       </nav>
     </div>
   </header>
+
+  <main class="intro-bg">
+    <div class="intro">
+      <div class="intro-conteudo">
+        <h1 class="intro-h1">Bicicletas feitas
+          sob medida<span>.</span></h1>
+        <p class="intro-p">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicletas.html">selecione a sua</a>
+      </div>
+      <img src="./img/fotos/introducao.jpg" alt="Bicicleta preta">
+    </div>
+  </main>
 </body>
 
 </html>
