--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         <p class="intro-p">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a href="./bicicletas.html">selecione a sua</a>
       </div>
-      <img src="./img/fotos/introducao.jpg" alt="Bicicleta preta">
+      <div>
+        <img src="./img/fotos/introducao.jpg" alt="Bicicleta preta">
+      </div>
     </div>
   </main>
 </body>
