--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </a>
       <nav aria-label="Primária">
         <ul class="header-menu">
-          <li><a href="./bicicletas.html">Bicicletas</a></li>
-          <li><a href="./seguros.html">Seguros</a></li>
-          <li><a href="./contato.html">Contato</a></li>
+          <li><a class="cor-0" href="./bicicletas.html">Bicicletas</a></li>
+          <li><a class="cor-0" href="./seguros.html">Seguros</a></li>
+          <li><a class="cor-0" href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -28,10 +28,10 @@
   <main class="intro-bg">
     <div class="intro">
       <div class="intro-conteudo">
-        <h1 class="intro-h1">Bicicletas feitas
-          sob medida<span>.</span></h1>
-        <p class="intro-p">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
-        <a href="./bicicletas.html">selecione a sua</a>
+        <h1 class="intro-h1 cor-0">Bicicletas feitas
+          sob medida<span class="cor-p1">.</span></h1>
+        <p class="intro-p cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao" href="./bicicletas.html">selecione a sua</a>
       </div>
       <div>
         <img src="./img/fotos/introducao.jpg" alt="Bicicleta preta">
