--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
       </div>
     </div>
   </main>
+
+  <article class="bikes-home">
+    <h2 class="cor-11 font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h1>
+      <span class="botao">escola a sua</span>
+      <span class="botao">escola a sua</span>
+      <span class="botao">escola a sua</span>
+      <span class="botao">escola a sua</span>
+      <span class="botao">escola a sua</span>
+
+  </article>
 </body>
 
 </html>
