adicionando slide home

--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
 
   <article class="bikes-home">
     <h2 class="cor-11 font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h1>
+      <ul class="bikes-lista">
+        <li>
+          <a href="/bicicletas.html">
+            <img src="/img/bicicletas/magic-home.jpg" alt="">
+            <h3 class="font-1-xl cor-11">Magic Might</h3>
+            <span class="cor-8 font-2-m">R$ 2499</span>
+          </a>
+        </li>
+        <li>
+          <a href="/bicicletas.html">
+            <img src="/img/bicicletas/nebula-home.jpg" alt="">
+            <h3 class="font-1-xl cor-11">Magic Might</h3>
+            <span class="cor-8 font-2-m">R$ 2499</span>
+          </a>
+        </li>
+        <li>
+          <a href="/bicicletas.html">
+            <img src="/img/bicicletas/nimbus-home.jpg" alt="">
+            <h3 class="font-1-xl cor-11">Magic Might</h3>
+            <span class="cor-8 font-2-m">R$ 2499</span>
+          </a>
+        </li>
+      </ul>
   </article>
 </body>
 
