--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./">
         <img src="./img/bikcraft.svg" alt="Bikcraft">
       </a>
@@ -26,7 +26,7 @@
   </header>
 
   <main class="intro-bg">
-    <div class="intro">
+    <div class="intro container">
       <div class="intro-conteudo">
         <h1 class="intro-h1 cor-0">Bicicletas feitas
           sob medida<span class="cor-p1">.</span></h1>
@@ -39,32 +39,59 @@
     </div>
   </main>
 
-  <article class="bikes-home">
-    <h2 class="cor-11 font-1-xxl">Escolha a sua <span class="cor-p1">.</span></h1>
+  <article class="bikes-home" aria-label="Bikes">
+    <h2 class="cor-11 font-1-xxl container">Escolha a sua <span class="cor-p1">.</span></h1>
       <ul class="bikes-lista">
         <li>
-          <a href="/bicicletas.html">
-            <img src="/img/bicicletas/magic-home.jpg" alt="">
+          <a href="./bicicletas/magic.html">
+            <img src="./img/bicicletas/magic-home.jpg" alt="bicicleta magic">
             <h3 class="font-1-xl cor-11">Magic Might</h3>
             <span class="cor-8 font-2-m">R$ 2499</span>
           </a>
         </li>
         <li>
-          <a href="/bicicletas.html">
-            <img src="/img/bicicletas/nebula-home.jpg" alt="">
+          <a href="./bicicletas/nebula.html">
+            <img src="./img/bicicletas/nebula-home.jpg" alt="bicicleta nebula">
             <h3 class="font-1-xl cor-11">Magic Might</h3>
             <span class="cor-8 font-2-m">R$ 2499</span>
           </a>
         </li>
         <li>
-          <a href="/bicicletas.html">
-            <img src="/img/bicicletas/nimbus-home.jpg" alt="">
+          <a href="./bicicletas/nimbus.html">
+            <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus">
             <h3 class="font-1-xl cor-11">Magic Might</h3>
             <span class="cor-8 font-2-m">R$ 2499</span>
           </a>
         </li>
       </ul>
   </article>
-</body>
+
+  <article class="tecnologia-bg">
+    <div class="tecnologia container">
+      <div class="tecnologia-conteudo">
+        <span class="cor-5 font-2-l-b">tecnologia avançada</span>
+        <h2 class="cor-0 font-1-xxl">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
+        <p class="cor-5 font-2-l ">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a class="link botao" href="">ESCOLHA UM MODELO</a>
+        <div class="tecnologia-vantagens">
+          <div>
+            <img src="./img/icones/eletrica.svg" alt="">
+            <h3 class="cor-0 font-1-l">Motor Elétrico</h3>
+            <p class="cor-5 font-2-s">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+          </div>
+          <div>
+            <img src="./img/icones/rastreador.svg" alt="">
+            <h3 class="cor-0 font-1-l">rastreador</h3>
+            <p class="cor-5 font-2-s">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+          </div>
+        </div>
+      </div>
+      <div class="tecnologia-img">
+        <img src="./img/fotos/tecnologia.jpg" alt="">
+      </div>
+    </div>
+  </article>
+
+  < </body>
 
 </html>
