--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
         <li>
           <a href="./bicicletas/nebula.html">
             <img src="./img/bicicletas/nebula-home.jpg" alt="bicicleta nebula">
-            <h3 class="font-1-xl cor-11">Magic Might</h3>
-            <span class="cor-8 font-2-m">R$ 2499</span>
+            <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
+            <span class="cor-8 font-2-m">R$ 4999</span>
           </a>
         </li>
         <li>
           <a href="./bicicletas/nimbus.html">
             <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta nimbus">
-            <h3 class="font-1-xl cor-11">Magic Might</h3>
-            <span class="cor-8 font-2-m">R$ 2499</span>
+            <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
+            <span class="cor-8 font-2-m">R$ 3999</span>
           </a>
         </li>
       </ul>
