--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
   </main>
 
-  <article class="bikes-home" aria-label="Bikes">
+  <article class="bikes-home" aria-label="Bikes home">
     <h2 class="cor-11 font-1-xxl container">Escolha a sua <span class="cor-p1">.</span></h1>
       <ul class="bikes-lista">
         <li>
@@ -66,13 +66,13 @@
       </ul>
   </article>
 
-  <article class="tecnologia-bg">
+  <article class="tecnologia-bg" aria-label="Tecnologia">
     <div class="tecnologia container">
       <div class="tecnologia-conteudo">
         <span class="cor-5 font-2-l-b">tecnologia avançada</span>
         <h2 class="cor-0 font-1-xxl">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
         <p class="cor-5 font-2-l ">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-        <a class="link botao" href="">ESCOLHA UM MODELO</a>
+        <a class="link font-2-l-b cor-p1" href="">ESCOLHA UM MODELO</a>
         <div class="tecnologia-vantagens">
           <div>
             <img src="./img/icones/eletrica.svg" alt="">
@@ -92,6 +92,31 @@
     </div>
   </article>
 
-  < </body>
+  <article class="parceiros" aria-label="Parceiros">
+    <h2 class="cor-11 font-1-xxl">nossos parceiros<span>.</span></h2>
+    <ul class="parceiros-lista">
+      <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
+      <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
+      <li><img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+      <li><img src="./img/parceiros/handel.svg" alt="handel"></li>
+      <li><img src="./img/parceiros/lescone.svg" alt="lescone"></li>
+      <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
+      <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+      <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+    </ul>
+  </article>
+
+
+  <section class="depoimento" aria-label="Depoimento">
+    <div class="depoimento-imagem">
+      <img src="./img/fotos/depoimento.jpg" alt="andando em uma bikecraft">
+    </div>
+    <div class="depoimento-conteudo">
+      <blockquote class="cor-p5">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</blockquote>
+      <span class="font-1-l cor-p5">Cliente</span>
+    </div>
+  </section>
+
+</body>
 
 </html>
