--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <article class="tecnologia-bg" aria-label="Tecnologia">
     <div class="tecnologia container">
-      <div class="tecnologia-conteudo">
+      <div class="azqsxs">
         <span class="cor-5 font-2-l-b">tecnologia avançada</span>
         <h2 class="cor-0 font-1-xxl">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
         <p class="cor-5 font-2-l ">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
@@ -116,6 +116,38 @@
       <span class="font-1-l cor-p5">Cliente</span>
     </div>
   </section>
+
+  <article class="seguros-bg" aria-label="Seguros">
+    <div class="seguro-container">
+      <h2 class="cor-6 font-1-xxl">Seguros<span class="cor-p1">.</span></h2>
+
+      <div class="seguro prata">
+        <h3 class="cor-6 font-1-xl">PRATA</h3>
+        <p class="font-1-xl cor-0">R$ 199 <span class="cor-6">mensal</span></p>
+        <ul class="seguro-lista cor-0 font-2-m">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao prata cor-4 " href="./seguros.html">inscreva-se</a>
+      </div>
+      <div class="seguro">
+        <h3 class="cor-p1 font-1-xl">OURO</h3>
+        <p class="font-1-xl cor-0">R$ 299 <span class="cor-6">mensal</span></p>
+        <ul class="seguro-lista cor-0 font-2-m">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li class="li-6">Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="botao ouro" href="./seguros.html">inscreva-se</a>
+      </div>
+
+    </div>
+  </article>
 
 </body>
 
