--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <article class="tecnologia-bg" aria-label="Tecnologia">
     <div class="tecnologia container">
-      <div class="azqsxs">
+      <div class="tecnologia-conteudo">
         <span class="cor-5 font-2-l-b">tecnologia avançada</span>
         <h2 class="cor-0 font-1-xxl">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
         <p class="cor-5 font-2-l ">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
@@ -141,10 +141,11 @@
           <li>Suporte 24h</li>
           <li>Cobertura nacional</li>
           <li>Desconto em parceiros</li>
-          <li class="li-6">Acesso ao Clube Bikcraft</li>
+          <li>Acesso ao Clube Bikcraft</li>
         </ul>
         <a class="botao ouro" href="./seguros.html">inscreva-se</a>
       </div>
+
 
     </div>
   </article>
