--- a/index.html
+++ b/index.html
@@ -145,10 +145,40 @@
         </ul>
         <a class="botao ouro" href="./seguros.html">inscreva-se</a>
       </div>
-
-
     </div>
   </article>
+
+  <footer class="footer-bg">
+    <div class="footer-container">
+      <img src="./img/bikcraft.svg" alt="Bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-l cor-0">contato</h3>
+        <ul class="cor-5 font-2-m footer-lista">
+          <li>+55 31 99999-9999</li>
+          <li>contato@bikcraft.com</li>
+          <li>Rua ali perto,42- Congonhas</li>
+          <li>Minas Gerais-MG</li>
+        </ul>
+      </div>
+      <div class="footer-info">
+        <h3 class="font-2-l cor-0">informações</h3>
+        <ul class="footer-lista">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./termo.html">Termos e Condições</a></li>
+        </ul>
+      </div>
+      <div class="footer-img">
+        <img src="./img/redes/facebook.svg" alt="">
+        <img src="./img/redes/instagram.svg" alt="">
+        <img src="./img/redes/youtube.svg" alt="">
+      </div>
+    </div>
+    <div class="footer-p">
+      <p class="cor-6">Bikcraft © Alguns direitos reservados.</p>
+    </div>
+  </footer>
 
 </body>
 
