--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
         </ul>
       </div>
       <div class="footer-img">
-        <img src="./img/redes/facebook.svg" alt="">
-        <img src="./img/redes/instagram.svg" alt="">
-        <img src="./img/redes/youtube.svg" alt="">
+        <a href=""><img src="./img/redes/facebook.svg" alt=""></a>
+        <a href=""><img src="./img/redes/instagram.svg" alt=""></a>
+        <a href=""><img src="./img/redes/youtube.svg" alt=""></a>
       </div>
     </div>
     <div class="footer-p">
