alterando imagens e preços em bicletas.html

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -65,8 +65,8 @@
     <div class="bicicleta-bg">
       <div class="bicicleta container">
         <div class="bicicleta-imagem">
-          <img src="./img/bicicletas/nimbus.jpg" alt="bicicleta preta">
-          <span class="cor-0 font-2-m">R$ 4999</span>
+          <img src="./img/bicicletas/magic.jpg" alt="bicicleta preta">
+          <span class="cor-0 font-2-m">R$ 2499</span>
         </div>
         <div class="bicicleta-conteudo">
           <h3 class="cor-0 font-1-xl">Nimbus Stark</h3>
@@ -89,14 +89,14 @@
               rastreador
             </li>
           </ul>
-          <a class="botao" href="./bicicletas/nimbus.html">mais sobre</a>
+          <a class="botao" href="./bicicletas/magic.html">mais sobre</a>
         </div>
       </div>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagem">
-        <img src="./img/bicicletas/nimbus.jpg" alt="bicicleta preta">
-        <span class="cor-0 font-2-m">R$ 4999</span>
+        <img src="./img/bicicletas/nebula.jpg" alt="bicicleta preta">
+        <span class="cor-0 font-2-m">R$ 3999</span>
       </div>
       <div class="bicicleta-conteudo">
         <h3 class="cor-11 font-1-xl">Nimbus Stark</h3>
@@ -119,7 +119,7 @@
             rastreador
           </li>
         </ul>
-        <a class="botao" href="./bicicletas/nimbus.html">mais sobre</a>
+        <a class="botao" href="./bicicletas/nebula.html">mais sobre</a>
       </div>
     </div>
 
