alterando nomes da segunda e terceira bicicleta

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -69,7 +69,7 @@
           <span class="cor-0 font-2-m">R$ 2499</span>
         </div>
         <div class="bicicleta-conteudo">
-          <h3 class="cor-0 font-1-xl">Nimbus Stark</h3>
+          <h3 class="cor-0 font-1-xl">Magic Might</h3>
           <p class="cor-5 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="bicicleta-lista cor-5 font-1-m">
             <li>
@@ -99,7 +99,7 @@
         <span class="cor-0 font-2-m">R$ 3999</span>
       </div>
       <div class="bicicleta-conteudo">
-        <h3 class="cor-11 font-1-xl">Nimbus Stark</h3>
+        <h3 class="cor-11 font-1-xl">Nebula Cosmic</h3>
         <p class="cor-8 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <ul class="bicicleta-lista cor-8 font-1-m">
           <li>
