--- a/bicicletas.html
+++ b/bicicletas.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikcraft- Bicicletas feitas a mão</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <title>Bikcraft- Bicicletas</title>
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -26,7 +26,7 @@
   </header>
 
   <main>
-    <article class="titulo-bg">
+    <article class="titulo-bg" aria-label="titulo">
       <div class="titulo">
         <p class="cor-5 font-2-l">Escolha a melhor para você</p>
         <h1 class="cor-0 font-1-xxl">nossas bicicletas<span class="cor-p1">.</span></h1>
