tirando um erro no paragrafo de seguros.html, e adicionando margin na ul em seguro.css

--- a/seguros.html
+++ b/seguros.html
@@ -75,7 +75,7 @@
         <li>
           <img src="./img/icones/carbono.svg" alt="">
           <h3 class="font-2-l cor-0">Carbono</h3>
-          <p class="cor-6 font-2-m">GNossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
+          <p class="cor-6 font-2-m">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
         </li>
         <li>
           <img src="./img/icones/sustentavel.svg" alt="">
