--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <span class="cor-5 font-2-l-b">tecnologia avançada</span>
         <h2 class="cor-0 font-1-xxl">Você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
         <p class="cor-5 font-2-l ">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
-        <a class="link font-2-l-b cor-p1" href="">ESCOLHA UM MODELO</a>
+        <a class="link font-2-l-b cor-p1" href="./bicicletas.html">ESCOLHA UM MODELO</a>
         <div class="tecnologia-vantagens">
           <div>
             <img src="./img/icones/eletrica.svg" alt="">
