mudando title do head

--- a/seguros.html
+++ b/seguros.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikcraft </title>
+  <title>Bikcraft - Seguros </title>
   <meta name="description" content="Termos e Condições">
   <link rel="stylesheet" href="./css/style.css">
 </head>
