--- a/seguros.html
+++ b/seguros.html
@@ -101,6 +101,38 @@
     </div>
   </article>
 
+  <section class="perguntas container">
+    <h2 class="font-1-xxl cor-12">perguntas frequentes <span class="cor-p1">.</span></h2>
+    <dl>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+    </dl>
+    <dl>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+    </dl>
+    <dl>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+    </dl>
+    <dl>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+    </dl>
+    <dl>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+    </dl>
+    <dl>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+    </dl>
+    <dl>
+      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+    </dl>
+  </section>
+
 
 
 
