alterando perguntas de perguntas frequentes em seguros

--- a/seguros.html
+++ b/seguros.html
@@ -108,27 +108,27 @@
       <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
     </dl>
     <dl>
-      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dt class="font-1-m-b">Como posso entrar em contato?</dt>
       <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
     </dl>
     <dl>
-      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
       <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
     </dl>
     <dl>
-      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
       <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
     </dl>
     <dl>
-      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
       <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
     </dl>
     <dl>
-      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
       <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
     </dl>
     <dl>
-      <dt class="font-1-m-b">Qual forma de pagamento vocês aceitam?</dt>
+      <dt class="font-1-m-b">Qual Bikcraft devo escolher para o meu tamanho?</dt>
       <dd class="cor-9 font-1-m">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
     </dl>
   </section>
