adicionando paginas individuais de cada modelo bikcraft

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bikcraft- Bicicletas</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <title>Bikcraft- bicicletas</title>
+  <meta name="description" content="bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -17,7 +17,7 @@
       </a>
       <nav aria-label="Primária">
         <ul class="header-menu">
-          <li><a class="cor-0" href="./bicicletas.html">Bicicletas</a></li>
+          <li><a class="cor-0" href="./bicicletas.html">bicicletas</a></li>
           <li><a class="cor-0" href="./seguros.html">Seguros</a></li>
           <li><a class="cor-0" href="./contato.html">Contato</a></li>
         </ul>
@@ -33,15 +33,15 @@
       </div>
     </article>
 
-    <div class="bicicleta container">
-      <div class="bicicleta-imagem">
+    <div class="bicicletas container">
+      <div class="bicicletas-imagem">
         <img src="./img/bicicletas/nimbus.jpg" alt="bicicleta preta">
         <span class="cor-0 font-2-m">R$ 4999</span>
       </div>
-      <div class="bicicleta-conteudo ">
+      <div class="bicicletas-conteudo ">
         <h3 class="cor-11 font-1-xl">Nimbus Stark</h3>
         <p class="cor-8 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-        <ul class="bicicleta-lista cor-8 font-1-m">
+        <ul class="bicicletas-lista cor-8 font-1-m">
           <li>
             <img class="img" src="./img/icones/eletrica.svg" alt="">
             Motor Elétrico
@@ -59,19 +59,19 @@
             rastreador
           </li>
         </ul>
-        <a class="botao" href="./bicicletas/nimbus.html">mais sobre</a>
+        <a class="botao" href="./bicicleta/nimbus.html">mais sobre</a>
       </div>
     </div>
-    <div class="bicicleta-bg">
-      <div class="bicicleta container">
-        <div class="bicicleta-imagem">
+    <div class="bicicletas-bg">
+      <div class="bicicletas container">
+        <div class="bicicletas-imagem">
           <img src="./img/bicicletas/magic.jpg" alt="bicicleta preta">
           <span class="cor-0 font-2-m">R$ 2499</span>
         </div>
-        <div class="bicicleta-conteudo">
+        <div class="bicicletas-conteudo">
           <h3 class="cor-0 font-1-xl">Magic Might</h3>
           <p class="cor-5 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <ul class="bicicleta-lista cor-5 font-1-m">
+          <ul class="bicicletas-lista cor-5 font-1-m">
             <li>
               <img class="img" src="./img/icones/eletrica.svg" alt="">
               Motor Elétrico
@@ -89,19 +89,19 @@
               rastreador
             </li>
           </ul>
-          <a class="botao" href="./bicicletas/magic.html">mais sobre</a>
+          <a class="botao" href="./bicicleta/magic.html">mais sobre</a>
         </div>
       </div>
     </div>
-    <div class="bicicleta container">
-      <div class="bicicleta-imagem">
+    <div class="bicicletas container">
+      <div class="bicicletas-imagem">
         <img src="./img/bicicletas/nebula.jpg" alt="bicicleta preta">
         <span class="cor-0 font-2-m">R$ 3999</span>
       </div>
-      <div class="bicicleta-conteudo">
+      <div class="bicicletas-conteudo">
         <h3 class="cor-11 font-1-xl">Nebula Cosmic</h3>
         <p class="cor-8 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-        <ul class="bicicleta-lista cor-8 font-1-m">
+        <ul class="bicicletas-lista cor-8 font-1-m">
           <li>
             <img class="img" src="./img/icones/eletrica.svg" alt="">
             Motor Elétrico
@@ -119,10 +119,9 @@
             rastreador
           </li>
         </ul>
-        <a class="botao" href="./bicicletas/nebula.html">mais sobre</a>
+        <a class="botao" href="./bicicleta/nebula.html">mais sobre</a>
       </div>
     </div>
-
 
   </main>
 
@@ -143,7 +142,7 @@
       <div class="footer-info">
         <h3 class="font-2-l cor-0">informações</h3>
         <ul class="footer-lista">
-          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./bicicletas.html">bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
           <li><a href="./termo.html">Termos e Condições</a></li>
