--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
     <h2 class="cor-11 font-1-xxl container">Escolha a sua <span class="cor-p1">.</span></h1>
       <ul class="bikes-lista">
         <li>
-          <a href="./bicicletas/magic.html">
+          <a href="./bicicleta/magic.html">
             <img src="./img/bicicletas/magic-home.jpg" alt="bicicleta magic">
             <h3 class="font-1-xl cor-11">Magic Might</h3>
             <span class="cor-8 font-2-m">R$ 2499</span>
           </a>
         </li>
         <li>
-          <a href="./bicicletas/nebula.html">
+          <a href="./bicicleta/nebula.html">
             <img src="./img/bicicletas/nimbus-home.jpg" alt="bicicleta nebula">
             <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
             <span class="cor-8 font-2-m">R$ 4999</span>
           </a>
         </li>
         <li>
-          <a href="./bicicletas/nimbus.html">
+          <a href="./bicicleta/nimbus.html">
             <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta nimbus">
             <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
             <span class="cor-8 font-2-m">R$ 3999</span>
