--- a/bicicletas.html
+++ b/bicicletas.html
@@ -33,45 +33,16 @@
       </div>
     </article>
 
-    <div class="bicicletas container">
-      <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nimbus.jpg" alt="bicicleta preta">
-        <span class="cor-0 font-2-m">R$ 4999</span>
-      </div>
-      <div class="bicicletas-conteudo ">
-        <h3 class="cor-11 font-1-xl">Nimbus Stark</h3>
-        <p class="cor-8 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-        <ul class="bicicletas-lista cor-8 font-1-m">
-          <li>
-            <img class="img" src="./img/icones/eletrica.svg" alt="">
-            Motor Elétrico
-          </li>
-          <li>
-            <img class="img" src="./img/icones/carbono.svg" alt="">
-            Fibra de Carbono
-          </li>
-          <li>
-            <img class="img" src="./img/icones/velocidade.svg" alt="">
-            40 km/h
-          </li>
-          <li>
-            <img class="img" src="./img/icones/rastreador.svg" alt="">
-            rastreador
-          </li>
-        </ul>
-        <a class="botao" href="./bicicleta/nimbus.html">mais sobre</a>
-      </div>
-    </div>
-    <div class="bicicletas-bg">
+    <a href="./bicicleta/nimbus.html">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic.jpg" alt="bicicleta preta">
-          <span class="cor-0 font-2-m">R$ 2499</span>
+          <img src="./img/bicicletas/nimbus.jpg" alt="bicicleta preta">
+          <span class="cor-0 font-2-m">R$ 4999</span>
         </div>
-        <div class="bicicletas-conteudo">
-          <h3 class="cor-0 font-1-xl">Magic Might</h3>
-          <p class="cor-5 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <ul class="bicicletas-lista cor-5 font-1-m">
+        <div class="bicicletas-conteudo ">
+          <h3 class="cor-11 font-1-xl">Nimbus Stark</h3>
+          <p class="cor-8 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+          <ul class="bicicletas-lista cor-8 font-1-m">
             <li>
               <img class="img" src="./img/icones/eletrica.svg" alt="">
               Motor Elétrico
@@ -89,39 +60,74 @@
               rastreador
             </li>
           </ul>
-          <a class="botao" href="./bicicleta/magic.html">mais sobre</a>
+          <a class="botao" href="./bicicleta/nimbus.html">mais sobre</a>
         </div>
       </div>
-    </div>
-    <div class="bicicletas container">
-      <div class="bicicletas-imagem">
-        <img src="./img/bicicletas/nebula.jpg" alt="bicicleta preta">
-        <span class="cor-0 font-2-m">R$ 3999</span>
+    </a>
+    <a href="./bicicleta/magic.html">
+      <div class="bicicletas-bg">
+        <div class="bicicletas container">
+          <div class="bicicletas-imagem">
+            <img src="./img/bicicletas/magic.jpg" alt="bicicleta preta">
+            <span class="cor-0 font-2-m">R$ 2499</span>
+          </div>
+          <div class="bicicletas-conteudo">
+            <h3 class="cor-0 font-1-xl">Magic Might</h3>
+            <p class="cor-5 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+            <ul class="bicicletas-lista cor-5 font-1-m">
+              <li>
+                <img class="img" src="./img/icones/eletrica.svg" alt="">
+                Motor Elétrico
+              </li>
+              <li>
+                <img class="img" src="./img/icones/carbono.svg" alt="">
+                Fibra de Carbono
+              </li>
+              <li>
+                <img class="img" src="./img/icones/velocidade.svg" alt="">
+                40 km/h
+              </li>
+              <li>
+                <img class="img" src="./img/icones/rastreador.svg" alt="">
+                rastreador
+              </li>
+            </ul>
+            <a class="botao" href="./bicicleta/magic.html">mais sobre</a>
+          </div>
+        </div>
       </div>
-      <div class="bicicletas-conteudo">
-        <h3 class="cor-11 font-1-xl">Nebula Cosmic</h3>
-        <p class="cor-8 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-        <ul class="bicicletas-lista cor-8 font-1-m">
-          <li>
-            <img class="img" src="./img/icones/eletrica.svg" alt="">
-            Motor Elétrico
-          </li>
-          <li>
-            <img class="img" src="./img/icones/carbono.svg" alt="">
-            Fibra de Carbono
-          </li>
-          <li>
-            <img class="img" src="./img/icones/velocidade.svg" alt="">
-            40 km/h
-          </li>
-          <li>
-            <img class="img" src="./img/icones/rastreador.svg" alt="">
-            rastreador
-          </li>
-        </ul>
-        <a class="botao" href="./bicicleta/nebula.html">mais sobre</a>
+    </a>
+    <a href="./bicicleta/nebula.html">
+      <div class="bicicletas container">
+        <div class="bicicletas-imagem">
+          <img src="./img/bicicletas/nebula.jpg" alt="bicicleta preta">
+          <span class="cor-0 font-2-m">R$ 3999</span>
+        </div>
+        <div class="bicicletas-conteudo">
+          <h3 class="cor-11 font-1-xl">Nebula Cosmic</h3>
+          <p class="cor-8 font-2-m">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+          <ul class="bicicletas-lista cor-8 font-1-m">
+            <li>
+              <img class="img" src="./img/icones/eletrica.svg" alt="">
+              Motor Elétrico
+            </li>
+            <li>
+              <img class="img" src="./img/icones/carbono.svg" alt="">
+              Fibra de Carbono
+            </li>
+            <li>
+              <img class="img" src="./img/icones/velocidade.svg" alt="">
+              40 km/h
+            </li>
+            <li>
+              <img class="img" src="./img/icones/rastreador.svg" alt="">
+              rastreador
+            </li>
+          </ul>
+          <a class="botao" href="./bicicleta/nebula.html">mais sobre</a>
+        </div>
       </div>
-    </div>
+    </a>
 
   </main>
 
