--- a/seguros.html
+++ b/seguros.html
@@ -11,6 +11,7 @@
 
 <body>
   <header class="header-bg">
+    aaaaaa
     <div class="header container">
       <a href="./">
         <img src="./img/bikcraft.svg" alt="Bikcraft">
